internal new contract